Fixed relevant FindBug messages